src/index.css
/* ... */
.circle-container:hover {
  animation-name: slideUp;
  animation-duration: 0.4s;
  animation-fill-mode: forwards;
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.445),0 17px 50px 0 rgba(0,0,0,0.19);
}

.circle-container:not(:hover) {
  animation-name: slideDown;
  animation-duration: 0.4s;
  animation-fill-mode: forwards;
}

.policy-div{
  background-color: rgba(0, 0, 0, 0.753);
  border-radius: 1em;
  
}

@media screen and (max-width: 540px) {
  .name-img-div  {
    display: none;
    visibility: hidden;
    font-size: 1.2em;
  }
}
/*
@media screen and (max-width: 600px) {

  .home-button {
    display: none;
    visibility: hidden;
    font-size: 0em;
    margin: 0px;
    padding: 0px;
  }

  .intro-div {
    display: flex;
    justify-content: center;
    justify-items: center;
    flex-direction: column;
    font-size: 1.2em;
    overflow-x: hidden;
  }

  .intro-div button {
    padding: 12px 12px;
  }

  .intro-name {
    line-height: 40px;
  }

  .intro-text {
    font-size: 1.5em;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
    column-gap: 0em;
    align-items: center;
    align-content: center;
  }

  .navbar button {
    font-size: 1em;
  }

  .header-div {
    display: flex;
    position: sticky;
    justify-content: space-between;
    align-items: center;
    top: 0;
    background-color: rgba(95, 121, 250, 0.349);
    backdrop-filter: blur(5px);
    border-radius: 2em;
    z-index: 10;
    padding-right: 2em;
  }

  ._8bit-img {
    height: 70px;
  }

  .about {
    flex-direction: column;
  }

  .education {
    flex-direction: column-reverse;
  }
  
  .education-text p {
    word-wrap: break-word;
    width: 13em;
  }

  .about {
    margin-right: auto;
    flex-direction: column;
  }

  .about-me {

  }

  .about-text {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .proj-div {
    flex-direction: column;
  }

  .proj-div img {
    width: 90vw;
    height: auto;
    margin-left: auto;
    margin-right: auto;
  }

  .proj-text {
    display: flex;
    width: 16em;
    flex-direction: column;
    align-items: center;
  }

  .portrait {
    margin-left: 0em;
    margin-right: 0em;
    border-radius: 2em;
  }

  .contact-div{
    font-size: 1em;
    width: 100vw;
  }

  .contact-div a{
    display: flex;
    font-size: 0.7em;
  }
}

*/

@media screen and (max-width: 1250px) {
  ._8bit-img {
    height: 0px;
    width: 0px;
  }

  .name-img-div {
    visibility: hidden;
    display: none;
    height: 0px;
    width: 0px;
  }

  .intro-div {
    display: flex;
    justify-content: center;
    justify-items: center;
    flex-direction: column;
    font-size: 1.2em;
    overflow-x: hidden;
    margin-bottom: 15em;
  }

  .intro-text {
    font-size: 1.5em;
  }

  .intro-div button {
    padding: 12px 12px;
  }

  .intro-name {
    line-height: 80px;
  }

  .navbar {
    display: flex;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
    column-gap: 0em;
    padding-left: 0;
    padding-right: 0;
    justify-content: space-evenly;
    width: 90vw;
  }

  .navbar button {
    display: flex;
    font-size: 1.2em;
  }

  .header-div {
    display: flex;
    position: sticky;
    top: 0;
    background-color: rgba(95, 121, 250, 0.349);
    backdrop-filter: blur(5px);
    border-radius: 2em;
    z-index: 10;
    max-width: 100vw;
    padding-right: 0;
    padding-left: 0;
    margin-right: 0;
    margin-left: 0;
    justify-content: center;
  }

  .education {
    flex-direction: column-reverse;
  }

  .education-text p {
    word-wrap: break-word;
    width: 80vw;
  }

  .work {
    flex-direction: column-reverse;
  }

  .about {
    margin-right: auto;
    flex-direction: column;
  }

  .about-me {
    width: 80vw;
  }

  .about-text {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .proj-div {
    flex-direction: column;
  }

  .proj-div img {
    width: 90vw;
    height: auto;
    margin-left: auto;
    margin-right: auto;
  }

  .proj-text {
    display: flex;
    width: 80vw;
    flex-direction: column;
    align-items: center;
  }

  .portrait {
    margin-left: 0em;
    margin-right: 0em;
    border-radius: 2em;
  }

  .contact-div{
    font-size: 1em;
    width: 90vw;
  }

  .contact-div a{
    display: flex;
    font-size: 0.7em;
  }

  .skills-icons {
    height: 4em;
  }

  .skills-icons-big {
    height: 3.8em;
  }

  .skills-icons-huge {
    height: 2.8em;
  }

  .skills-icons-div {
    display: flex;
    column-gap: 3em;
    row-gap: 2em;
    flex-wrap: wrap;
    width: 85vw;
    justify-content: center;
    align-items: center;
  }
  
  .circle-container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    background: rgb(21,54,116);
    background: linear-gradient(321deg, rgba(21,54,116,1) 15%, rgba(253,224,45,1) 100%);
  }

  .skill-icon-container p {
    font-size: 1em;
  }

  .fun-div {
    display: none;
    visibility: hidden;
  }

}

